# PRRC

./: .bandit  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  AGENTS.md  CODE_REVIEW_REPORT.md  CODE_REVIEW_REPORT_2025-11-05.md  DEVICE_TRACKING_FIX.md  PHASE_0_COMPLETE.md  PHASE_1_COMPLETE.md  PHASE_2_COMPLETE.md  PHASE_6_COMPLETE.md  PHASE_7_COMPLETE.md  README.md  ROADMAP.md  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  roadmap.md  test_routing_fix.py
docs/: DEVELOPER_ONBOARDING.md  GUI_REFACTORING_PLAN.md  INTEGRATION.md  PHASE_3_COMPLETE.md  README.md  TROUBLESHOOTING.md  code_quality_baseline.md  development_standards.md  fieldops_gui_style.md  fieldops_mission_package.md  hq_command_gui_design.md  hq_command_gui_roadmap.md  phase_0_audit.md  security_baseline.md
docs/samples/: mission_manifest.yaml
samples/hq_command/: production_inputs.json
samples/missions/phase3_demo/: manifest.json
samples/missions/phase3_demo/comms/: mesh_callsigns.txt
samples/missions/phase3_demo/docs/: sop_quick_reference.txt
samples/missions/phase3_demo/maps/: mission_overview.geojson
src/: prrc_cli.py
src/bridge/: __init__.py  comms_router.py  compliance.py  local_message_bus.py
src/fieldops/: __init__.py  connectors.py  event_cache.py  hardware.py  main.py  mission_loader.py  queue_storage.py  telemetry.py
src/fieldops/gui/: __init__.py  app.py  controller.py  dialogs.py  offline_cache.py  state.py
src/fieldops/gui/styles/: __init__.py  theme.py
src/hq_command/: __init__.py  analytics.py  main.py  performance.py  production.py  sync.py  tasking_engine.py
src/hq_command/audit/: __init__.py  event_store.py  services.py
src/hq_command/gui/: __init__.py  __main__.py  accessibility.py  animations.py  caching.py  charts.py  components.py  controller.py  data_table.py  enhanced_panes.py  icons.py  kanban.py  layouts.py  main_window.py  notifications.py  panes.py  qt_compat.py  search_filter.py  timeline.py  virtualization.py  window_manager.py  workflows.py
src/hq_command/gui/styles/: __init__.py  theme.py
src/hq_command/security/: __init__.py  rbac.py
src/integration/: __init__.py  coordinator.py  fieldops_integration.py  hq_integration.py  protocol.py  schemas.py  utils.py
src/shared/: __init__.py  error_handling.py  schemas.py  security.py
tests/: README.md  conftest.py  test_integration.py  test_prrc_cli.py
tests/bridge/: test_comms_router.py  test_compliance.py
tests/fieldops/: test_gui_app_launch.py  test_gui_controller.py  test_gui_theme.py  test_main.py  test_mission_loader.py  test_telemetry.py
tests/hq_command/: test_analytics.py  test_audit_phase6.py  test_gui_controller_models.py  test_hq_main.py  test_main_gui_dispatch.py  test_phase8_performance.py  test_phase9_production.py  test_qt_compat.py  test_security_rbac.py  test_sync.py  test_tasking_engine.py
